force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__CompressFactor__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__CompressFactor__c</fullName>
    <label>CompressFactor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>