force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__FlashPoint__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__FlashPoint__c</fullName>
    <label>FlashPoint :</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>