force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__MolecularWeight__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MolecularWeight__c</fullName>
    <label>MolecularWeight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>