force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__RDSteamDisp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RDSteamDisp__c</fullName>
    <label>Rupture Disc Steam Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>