force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__SpGRelToWater__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SpGRelToWater__c</fullName>
    <label>SpGRelToWater :</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>