force-app/main/default/objects/cdcpc__Media_Property__c/fields/cdcpc__ValveDisp__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ValveDisp__c</fullName>
    <label>Relief Valve Display</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>