force-app/main/default/objects/cdcpc__Media_Property__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__Media__c</columns>
    <columns>cdcpc__Media_Phase__c</columns>
    <columns>cdcpc__SpecificHeatRatio__c</columns>
    <columns>cdcpc__MolecularWeight__c</columns>
    <columns>cdcpc__CompressFactor__c</columns>
    <columns>cdcpc__SpGRelToAir__c</columns>
    <columns>cdcpc__Density__c</columns>
    <columns>cdcpc__BoilingPoint__c</columns>
    <columns>cdcpc__FlashPoint__c</columns>
    <columns>cdcpc__SpGRelToWater__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>